--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -45,6 +45,13 @@
     margin: 20px auto 0;
   }
 
+  .delete{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    filter: invert(60%);
+  }
   .recipe-list .card.dark {
     background: #555;
   }
