--- a/src/pages/Create/Create.css
+++ b/src/pages/Create/Create.css
@@ -11,7 +11,7 @@
     margin-top: 10px;
     font-size: 0.8em;
   }
-  .create button {
+  button {
     display: block;
     width: 100px;
     font-size: 1em;
